fetch user by id and users list api's
