# admin/module.ts
@@ -2,6 +2,7 @@ import { StatusCodes } from "http-status-codes";
 import { Roles, UserModel } from "../users/users-model";
 const jwt = require("jsonwebtoken");
 import * as bcrypt from "bcryptjs";
+import { getUserById } from "../utils/auth";
 
 export async function login(req, res, next) {
   const { email, password } = req.body;
@@ -29,7 +30,7 @@ export async function login(req, res, next) {
     role,
     email,
     name,
-    token:`Bearer ${token}`,
+    token: `Bearer ${token}`,
   });
 }
 
@@ -56,9 +57,9 @@ export const createUser = async (req, res, next) => {
     if (!email) {
       throw new Error("Email id required to create user.");
     }
-    const isUserExist = await UserModel.findOne({email}).exec();
-    if(isUserExist){
-      throw new Error('User already Exists')
+    const isUserExist = await UserModel.findOne({ email }).exec();
+    if (isUserExist) {
+      throw new Error("User already Exists");
     }
     const user = await UserModel.create([
       {
@@ -74,5 +75,55 @@ export const createUser = async (req, res, next) => {
     return res.status(StatusCodes.OK).send({ id: user.id });
   } catch (err) {
     return res.status(StatusCodes.BAD_REQUEST).send({ message: err.message });
+  }
+};
+
+export const getUsers = async (req, res, next) => {
+  try {
+    const dbUsers = await UserModel.find({}).exec();
+    const users = dbUsers
+      .map((user) => {
+        const { id, role, active, reportee, email, name } = user;
+        return {
+          id,
+          role,
+          active,
+          reportee,
+          email,
+          name,
+        };
+      })
+      .filter((user) => user.role !== Roles.SUPER_ADMIN);
+    return res.status(StatusCodes.OK).send(users);
+  } catch (err) {
+    return res
+      .status(StatusCodes.INTERNAL_SERVER_ERROR)
+      .send({ message: err.message });
+  }
+};
+
+export const getUserInfo = async (req, res, next) => {
+  try {
+    const { id } = req.params;
+    if (!id) {
+      return res
+        .status(StatusCodes.BAD_REQUEST)
+        .send({ message: "User id not found" });
+    }
+    const user = await getUserById(id);
+    const { role, active, reportee, email, name } = user;
+    const payload = {
+      id,
+      role,
+      active,
+      reportee,
+      email,
+      name,
+    };
+    return res.status(StatusCodes.OK).send(payload);
+  } catch (err) {
+    return res
+      .status(StatusCodes.INTERNAL_SERVER_ERROR)
+      .send({ message: err.message });
   }
 };
